TMS.FinalAssignment: modified prototype of CheckParser.java;
0.1 - prototype get all necessary info from data/checks and sum it in variable checkSum. Also, handled with exceptions (isEmptyValidation). Need to implement second exception isDirectoryValidation.
0.2 - remove all validation for time. CheckParser.java now move all garbage checks into temp/garbageChecks. Also, encapsulated all logic in private methods and made regex validation of files.